update some content

--- a/dubbo/1.dubbo框架全面介绍和快速入门.md
+++ b/dubbo/1.dubbo框架全面介绍和快速入门.md
@@ -260,7 +260,7 @@ Hello World 222protocol is dubbo,address is 169.254.48.18:20880
 ````xml
 <dubbo:reference id="helloService" check="false" 
                      interface="com.dubbo.api.HelloService" 
-                     loadbalance="roundrobin"/><!--这儿的策略是轮训还有其他策略-->
+                     loadbalance="roundrobin"/><!--这儿的策略是轮询还有其他策略-->
 ````
 
 管理台中的修改如下
@@ -344,7 +344,7 @@ Hello World 222protocol is dubbo,address is 169.254.48.18:20880
 
 ![](./img/6.png)
 
-`2。7新增配置中心，标签路由`
+`2.7新增配置中心，标签路由`
 
 配置中心：
 
