--- a/jvm/1.JVM内存结构.md
+++ b/jvm/1.JVM内存结构.md
@@ -5,13 +5,12 @@
 + GC日志格式
 + GC调优实战
 
-java虚拟机(java virtual machine，JVM)，一种能够运行java字节码的虚拟机。作为一种编程语言的虚拟机，实际上
-不只是专用于Java语言，只要生成的编译文件匹配JVM对加载编译文件格式要求，任何语言都可以由JVM编译运行。比如kotlin、scala等。
+java虚拟机(java virtual machine，JVM)，一种能够运行java字节码的虚拟机。作为一种编程语言的虚拟机，实际上，不只是专用于Java语言，只要生成的编译文件匹配JVM对加载编译文件格式要求，任何语言都可以由JVM编译运行。比如kotlin、scala等。
 
 jvm有很多，不只是Hotspot，还有JRockit、J9等等
 
 ```undefined
-> 在JDK1.8之前，JRockit号称是最快的虚拟机，Sun公司不开心了就把它收购了，所以才有现在的JDK1.8，JDK1.8的功能之所以应用广，主要是增加了很多新的特性，同时虚拟机性能也提升了很高
+在JDK1.8之前，JRockit号称是最快的虚拟机，Sun公司不开心了就把它收购了，所以才有现在的JDK1.8，JDK1.8的功能之所以应用广，主要是增加了很多新的特性，同时虚拟机性能也提升了很高
 ```
 
 ## JVM的基本结构
