--- a/redis/1.redis单机版详解.md
+++ b/redis/1.redis单机版详解.md
@@ -1,50 +1,52 @@
-
-
 # redis
 
-## 是什么?
+## redis是什么?
 
 是完全开源免费的，用c语言编写的，是一个单线程，高性能的（key/value）内存数据库，基于内存运行并支持持久化的nosql数据库
 
-## 能干嘛？
+## redis能干嘛？
 
 主要是用来做缓存，但不仅仅只能做缓存，比如：redis的计数器生成分布式唯一主键，redis实现分布式锁，队列，会话缓存。
 
-## 去哪下？
+## redis去哪下？
 
 官网，也可以通过Linux  yum直接下载安装
 
-## 怎么玩？
+## redis怎么玩？
 
-1.安装
-2.redis数据类型（api操作）
-3.redis配置文件解析
-4.redis的持久化
-5.redis的事务
-6.redis的发布订阅
+1. 安装
+2. redis数据类型（api操作）
+3. redis配置文件解析
+4. redis的持久化
+5. redis的事务
+6. redis的发布订阅7.java客户端操作（jedis）
 
-7.java客户端操作（jedis）
-
-### redis的安装
+## redis的安装
 
 1. 解压
-2.`make`
-如果make报错的话  大家就可以看一下是不是报没有gcc的错  如果是报没有gcc的错，那就要先安装一个gcc   
 
-```yum install gcc-c++```
-安装好gcc之后最好执行一下``make distclean`` 因为前面make的时候它执行了一些东西  要先把他清掉
-3.``make install``
+   ```
+   tar -zxvf xxxx
+   ```
 
-查看redis默认安装位置
-4.``/usr/local/bin``
+2. 编译
+  使用`make`命令，如果make报错的话，可以看一下是不是报没有gcc的错，如果是报没有gcc的错，那就要先安装一个gcc：
 
-5.启动
+  `yum install gcc-c++`  
 
-`/usr/local/bin/redis-server xxx/x/redis.conf`
+  安装好gcc之后最好执行一下``make distclean`` 因为前面make的时候它执行了一些东西，要先把他清掉。
 
-6.登录客户端
+3. ``make install``
 
-`/usr/local/bin/redis-cli -h 127.0.0.1 -p 6379 -a password`
+   执行`make install`命令，查看redis默认安装位置在`/usr/local/bin`目录下
+
+5. 启动
+
+   `/usr/local/bin/redis-server xxx/x/redis.conf`
+
+6. 登录客户端
+
+   `/usr/local/bin/redis-cli -h 127.0.0.1 -p 6379 -a password`
 
 ## Redis配置文件
 
@@ -202,40 +204,35 @@ aof-load-truncated yes
 
 ## redis设置外网访问
 
-```
- 1.注释bind并且把protected-mode no
- 2.使用bind
- 3.设置密码
- protected-mode它启用的条件有两个，第一是没有使用bind，第二是没有设置访问密码。
-```
+1. 注释bind并且把protected-mode no
+2. 使用bind
+3. 设置密码
 
-```java
-/**
-	可以设置bind 0.0.0.0不用将protected-mode设为no也可以实现外网访问
-**/
-```
+**protected-mode它启用的条件有两个，第一是没有使用bind，第二是没有设置访问密码。**
+
+**可以设置bind 0.0.0.0不用将protected-mode设为no也可以实现外网访问**
 
 
 
 ## redis数据类型及api操作(http://redisdoc.com/)
 
-#### key
+#### 0.key
 
-`redis默认支持16个库`
+redis默认支持16个库
 
-keys *  
+1. `keys *`  查看所有的key
 
-scan  0 match  *  count  1
+2. `scan  0 match  *  count  1`
 
-exists key 判断某个key是否存在
+3. `exists key` 判断某个key是否存在
 
-move key db  当前库就没有了，到指定的库中去了
+4. `move key db`  当前库就没有了，到指定的库中去了
 
-expire key  为给定的key设置过期时间
+5. `expire key`  为给定的key设置过期时间
 
-ttl key 查看还有多少时间过期   -1表示永不过期  -2表示已过期
+6. `ttl key` 查看还有多少时间过期   -1表示永不过期  -2表示已过期
 
-type key  查看key是什么类型
+7. `type key ` 查看key是什么类型
 
 ```java
 public void testKey() {
@@ -277,49 +274,45 @@ string
 
 string是redis最基本的类型，你可以理解成与Memcached一模一样的类型，一个key对应一个value。
 
-string类型是二进制安全的。意思是redis的string可以包含任何数据。比如jpg图片或者序列化的对象 。
+string类型是二进制安全的，意思是redis的string可以包含任何数据。比如jpg图片或者序列化的对象 。
 
-string类型是Redis最基本的数据类型，一个redis中字符串value最多可以是512M
+string类型是Redis最基本的数据类型，一个redis中字符串value最多可以是512M。
 
-set  key  value   设置key  value
+1. `set  key  value`   设置key  value
 
-get  key    查看当前key的值
+2. `get  key`    查看当前key的值
 
-del  key   删除key
+3. `del  key`   删除key
 
-append key  value   如果key存在，则在指定的key末尾添加，如果key不存在则类似set
+4. `append key  value`   如果key存在，则在指定的key末尾添加，如果key不存在则类似set
 
-strlen  key  返回此key的长度
+5. `strlen  key`  返回此key的长度
 
 以下几个命令只有在key值为数字的时候才能正常操作
 
-------
+6. `incr  key`  为执定key的值加一
 
-incr  key  为执定key的值加一
+7. `decr  key`  为指定key的值减一
 
-decr  key  为指定key的值减一
+8. `incrby key`  数值     为指定key的值增加数值
 
-incrby key  数值     为指定key的值增加数值
+9. `decrby key`  数值     为指定key的值减数值
 
-decrby key  数值     为指定key的值减数值
+10 .getrange  key  0(开始位置)  -1（结束位置）    获取指定区间范围内的值，类似between......and的关系 （0 -1）表示全部
 
-------
+11. setrange key 1（开始位置，从哪里开始设置） 具体值    设置（替换）指定区间范围内的值
 
-getrange  key  0(开始位置)  -1（结束位置）    获取指定区间范围内的值，类似between......and的关系 （0 -1）表示全部
+12. setex 键 秒值 真实值    设置带过期时间的key，动态设置。
 
-setrange key 1（开始位置，从哪里开始设置） 具体值    设置（替换）指定区间范围内的值
+13. setnx  key   value         只有在 key 不存在时设置 key 的值。
 
-setex 键 秒值 真实值    设置带过期时间的key，动态设置。
+14. mset   key1   value  key2   value       同时设置一个或多个 key-value 对。
 
-setnx  key   value         只有在 key 不存在时设置 key 的值。
+15. mget   key1   key 2    获取所有(一个或多个)给定 key 的值。
 
-mset   key1   value  key2   value       同时设置一个或多个 key-value 对。
+16. msetnx   key1   value  key2   value   同时设置一个或多个 key-value 对，当且仅当所有给定 key 都不存在。
 
-mget   key1   key 2    获取所有(一个或多个)给定 key 的值。
-
-msetnx   key1   value  key2   value   同时设置一个或多个 key-value 对，当且仅当所有给定 key 都不存在。
-
-getset   key    value  将给定 key 的值设为 value ，并返回 key 的旧值(old value)。
+17. getset   key    value  将给定 key 的值设为 value ，并返回 key 的旧值(old value)。
 
 ````java
 public void testString() {
@@ -383,13 +376,13 @@ OK
 Redis 列表是简单的字符串列表，按照插入顺序排序。你可以添加一个元素导列表的头部（左边）或者尾部（右边）。
 它的底层实际是个链表
 
-lpush  key  value1  value2  将一个或多个值加入到列表头部
+`lpush  key  value1  value2`  将一个或多个值加入到列表头部
 
-rpush  key  value1  value2 将一个或多个值加入到列表底部
+`rpush  key  value1  value2` 将一个或多个值加入到列表底部
 
-lrange key  start  end  获取列表指定范围的元素   （0 -1）表示全部
+`lrange key  start  end`  获取列表指定范围的元素   （0 -1）表示全部
 
-lpop key 移出并获取列表第一个元素
+`lpop key` 移出并获取列表第一个元素
 
 rpop key  移出并获取列表最后一个元素
 
@@ -590,15 +583,13 @@ public void testZset() {
 
 ## redis的持久化机制
 
-说白了，就是在指定的时间间隔内，将内存当中的数据集快照写入磁盘，它恢复时是将快照文件直接读到内存
+说白了，就是在指定的时间间隔内，将内存当中的数据集快照写入磁盘，它恢复时是将快照文件直接读到内存，具体是什么意思呢？我们都知道，内存当中的数据，如果我们一断电，那么数据必然会丢失，但是玩过redis的应该都知道，我们一关机之后再启动的时候数据是还在的，所以它必然是在redis启动的时候重新去加载了持久化的文件。
 
-什么意思呢？我们都知道，内存当中的数据，如果我们一断电，那么数据必然会丢失，但是玩过redis的同学应该都知道，我们一关机之后再启动的时候数据是还在的，所以它必然是在redis启动的时候重新去加载了持久化的文件
+redis提供两种方式进行持久化：
 
-redis提供两种方式进行持久化，
+一种是RDB持久化默认。
 
-一种是RDB持久化默认，
-
-  另外一种是AOF（append only file）持久化。
+另外一种是AOF（append only file）持久化。
 
 ### 1.RDB是什么？
 
@@ -606,13 +597,13 @@ redis提供两种方式进行持久化，
 
 #### 1.这个持久化文件在哪里
 
-`文件都持久化在dir配置的目录里面`
+**文件都持久化在dir配置的目录里面**
 
-#### 2.他什么时候fork子线程，或者什么时候触发rdb持久化机制
+#### 2.它什么时候fork子线程，或者什么时候触发rdb持久化机制
 
  shutdown时，如果没有开启aof，会触发
- 配置文件中默认的快照配置
- 执行命令`save`或者`bgsave`  `save`是只管保存，其他不管，全部阻塞  `bgsave`： redis会在后台异步进行快照操作，同时可以响应客户端的请求
+配置文件中默认的快照配置
+ 执行命令`save`或者`bgsave`  ，`save`是只管保存，其他不管，全部阻塞，`bgsave`： redis会在后台异步进行快照操作，同时可以响应客户端的请求。
  执行flushall命令  但是里面是空的，无意义
 
 ````properties
@@ -636,7 +627,7 @@ save 60 10000
 
 #### 1.这个持久化文件在哪里
 
-`文件都持久化在dir配置的目录里面`
+**`文件都持久化在dir配置的目录里面`**
 
 #### 2.触发机制（根据配置文件配置项）
 
@@ -658,7 +649,7 @@ appendfilename "appendonly.aof"
 #指定更新日志条件，共有3个可选值： 
 #  no：表示等操作系统进行数据缓存同步到磁盘（快，持久化没保证） 
 #  always：同步持久化，每次发生数据变更时，立即记录到磁盘（慢，安全） 
-#  everysec：表示每秒同步一次（默认值,很快，但可能会丢失一秒以内的数据）
+#  everysec：表示每秒同步一次（默认值，很快，但可能会丢失一秒以内的数据）
 # appendfsync always
 appendfsync everysec
 # appendfsync no
