--- a/redis/2.redis集群配置之主从复制.md
+++ b/redis/2.redis集群配置之主从复制.md
@@ -1,226 +1,178 @@
-
-
-# redis集群专题
-
-## Redis主从复制
+# Redis主从复制
 
 ### 1.是什么
 
-1.单机有什么问题：
+单机有什么问题：
 
-单机故障
+1. 单机故障
 
-容量瓶颈
+2. 容量瓶颈
 
-qps瓶颈
+3. qps瓶颈
 
-主机数据更新后根据配置和策略，自动同步到备机的master/slaver机制，mester已写为主，slaver已读为主
+主机数据更新后根据配置和策略，自动同步到备机的master/slaver机制，mester以写为主，slaver已读为主。
 
 ### 2.能干嘛
 
-1.读写分离
-
-2.容灾备份
+1. 读写分离
+2. 容灾备份
 
 ### 3.怎么玩
 
 玩法原则:   
 
-1.配从不配主
+1. 配从不配主
+2. 使用命令`SLAVEOF`动态指定主从关系  ，如果设置了密码，关联后使用`config set masterauth`密码
+3. 配置文件和命令混合使用时，如果混合使用，动态指定了主从，请注意一定要修改对应的配置文件。
 
-2.使用命令 SLAVEOF 动态指定主从关系  ，如果设置了密码，关联后使用 config set masterauth 密码
+具体操作：
 
-3.配置文件和命令混合使用时，如果混合使用，动态指定了主从，请注意一定要修改对应的配置文件
+1. 新建redis8000，redis8001，redis8002文件夹
 
+2. 将redis.conf文件复制在redis8000下
 
+3. 分别修改个目录下的redis.conf文件
 
-1.新建redis8000,redis8001,redis8002文件夹
+   修改master节点配置文件`redis8000/redis.conf`
 
-2.将redis.conf文件复制在redis8000下
-
-3.分别修改个目录下的redis.conf文件
-
-​	redis8000/redis.conf `master`
-
-````properties
-bind 192.168.0.104   指定本机ip
-port 8000
-daemonize yes
-pidfile /var/run/redis_8000.pid  
-dir /myredis/redis8000
-requirepass 123456
-````
-
-​	
-
-4.把redis8000/redis.conf文件复制到redis8001,redis8002下
-
-​	redis8001/redis.conf
-
-1. 使用命令`:%s/8000/8001/g`批量替换端口号
-
- 2. 修改配置`redis.conf`
-
- 3. ```properties
-    replicaof 192.168.0.104 8000 # 指定master机器
-    masterauth 123456 # 指定master 密码
-    ```
-
-​	redis8002/redis.conf
-
-```
-   	1.  :%s/8000/8002/g    批量替换
- 	2.  replicaof 192.168.0.104 8000
- 	3.  masterauth 123456
-```
-
-5.分别启动8000.8001,8002实例
-
-`[root@localhost myredis]# /usr/local/bin/redis-server /myredis/redis8000/redis.conf `
-`[root@localhost myredis]# /usr/local/bin/redis-server /myredis/redis8001/redis.conf `
-`[root@localhost myredis]# /usr/local/bin/redis-server /myredis/redis8002/redis.conf `
-
-6.客户端连接
-
-`/usr/local/bin/redis-cli -h 192.168.0.104 -p 8000 -a 123456`
-
-`/usr/local/bin/redis-cli -h 192.168.0.104 -p 8001 -a 123456`
-
-`/usr/local/bin/redis-cli -h 192.168.0.104 -p 8002 -a 123456`
-
-7.命令解析
-
-1. 查看角色信息
-
-````java
-info replication
-// ===============
-# Replication
-role:master
-connected_slaves:2
-slave0:ip=192.168.122.3,port=8001,state=online,offset=234,lag=1
-slave1:ip=192.168.122.3,port=8002,state=online,offset=234,lag=1
-master_replid:a9006e39d1495abffffb5d1ab5539ba6c1e99e03
-master_replid2:0000000000000000000000000000000000000000
-master_repl_offset:234
-second_repl_offset:-1
-repl_backlog_active:1
-repl_backlog_size:1048576
-repl_backlog_first_byte_offset:1
-repl_backlog_histlen:234
-````
-
-2.动态设定配置
-
-````java
-config set xxx xxx
-````
-
-```java
- config set masterauth 123456
-```
-
-`所以不用修改配置文件进行重启 重启后会失效 `
-
-同样也可以通过cnfig get 获取配置信息
-
-1. 指定从节点
-
-   ````java
-   SLAVEOF 192.168.122.3 8000 指定redis为某个节点的从节点,比如没有配置之后
+   ````properties
+   bind 192.168.0.104   指定本机ip
+   port 8000
+   daemonize yes
+   pidfile /var/run/redis_8000.pid  
+   dir /myredis/redis8000
+   requirepass 123456	
    ````
 
-   
+4. 把redis8000/redis.conf文件复制到redis8001，redis8002下
 
-````
-建议: 一般来说会将主机的rdb 和 aof功能关闭
-因为很损耗性能,如果要保证数据一致性,那么将aof开启即可 rdb不要打开
-从机打
+   redis8001/redis.conf
 
+   使用命令`:%s/8000/8001/g`批量替换端口号并修改两个配置
 
-````
+   ````properties
+   replicaof 192.168.0.104 8000 # 指定master机器
+   masterauth 123456 # 指定master 密码
+   ````
 
-`尽量让主机少干点事儿`
+   redis8002/redis.conf的配置如上
 
-`从机能不能写数据?`
+   1. 使用`:%s/8000/8002/g`批量替换端口号
 
-````properties
-# 从机不能写数据,默认不能
-# 设置slave是否只读的,从2.6开启的,slave默认是只读的
-replica-read-only yes
+   2. 修改两个配置
 
-````
+      ````properties
+      replicaof 192.168.0.104 8000 # 指定master机器
+      masterauth 123456 # 指定master 密码
+      ````
 
-````java
-/**
-	从机写数据的话,主机是监听不到的,这造成数据不一致
-**/
-````
+5. 分别启动8000，8001，8002实例
+   1. `[root@localhost myredis]# /usr/local/bin/redis-server /myredis/redis8000/redis.conf `
+   2. `[root@localhost myredis]# /usr/local/bin/redis-server /myredis/redis8001/redis.conf `
+   3. `[root@localhost myredis]# /usr/local/bin/redis-server /myredis/redis8002/redis.conf `
 
+6. 客户端连接
+   1. `/usr/local/bin/redis-cli -h 192.168.0.104 -p 8000 -a 123456`
+   2. `/usr/local/bin/redis-cli -h 192.168.0.104 -p 8001 -a 123456`
+   3. `/usr/local/bin/redis-cli -h 192.168.0.104 -p 8002 -a 123456`
 
+7. 命令解析
+
+   1. 查看角色信息，登录进客户端使用`info replication`查看
+
+      ````
+      # Replication
+      role:master
+      connected_slaves:2
+      slave0:ip=127.0.0.1,port=8001,state=online,offset=98,lag=0
+      slave1:ip=127.0.0.1,port=8002,state=online,offset=98,lag=0
+      master_replid:a0707d677bfba2c70ff2ccd665de36cc2f3f3a0f
+      master_replid2:0000000000000000000000000000000000000000
+      master_repl_offset:98
+      second_repl_offset:-1
+      repl_backlog_active:1
+      repl_backlog_size:1048576
+      repl_backlog_first_byte_offset:1
+      repl_backlog_histlen:98
+      ````
+
+   2. 动态设定配置`config set xxx xxx`
+
+      在主从模式下我们可以动态设定配置，比如`config set masterauth 123456`，虽然这样设置不用重启服务，但是重启后配置会失效，所以还需要我们具体去修改配置文件的指定信息。
+
+      同样的，我们也可以通过`config get`获取配置信息。
+
+      指定从节点命令：`SLAVEOF 192.168.122.3 8000 指定redis为某个节点的从节点,比如没有配置之后`
+
+8. 建议
+
+   一般来说会将主机的rdb和aof功能关闭，因为很损耗性能，如果要保证数据一致性，那么将aof开启即可，rdb不要打开，从机打开。尽量让主机少干点事儿。
+
+   从机是不能写数据的，默认不能。因为**从机写数据的话，主机是监听不到的，这造成数据不一致。**
+
+   ````properties
+   # 从机不能写数据,默认不能
+   # 设置slave是否只读的,从2.6开启的,slave默认是只读的
+   replica-read-only yes
+   ````
 
 ### 4.全量复制消耗
 
-主从复制分为`全量复制`和`增量复制`
+主从复制分为**全量复制**和**增量复制**，流程如下图：
 
 ![](./img/4.png)
 
-全量复制流程
+#### 全量复制流程
 
 ![](./img/3.png)
 
-1.第一次连接主机从机会发送一个命令给主机上面?号代表runid每一个redis都有一个唯一标识,redis的就是runid,第一次从机不知道主机的runid所以发送		一个?过去请求全量复制
-`info server`可以看到runid的信息
+1. 第一次连接主机时，从机会发送一个命令给主机，上图?号代表runid，每一个redis都有的一个唯一标识，redis的就是runid，第一次从机不知道主机的runid所以发送一个?过去请求全量复制。我们可以通过`info server`看到runid的信息
 
-````java
-192.168.122.3:8002> info server
-# Server
-redis_version:5.0.5
-redis_git_sha1:00000000
-redis_git_dirty:0
-redis_build_id:9d46733cce1193bd
-redis_mode:standalone
-os:Linux 3.10.0-957.el7.x86_64 x86_64
-arch_bits:64
-multiplexing_api:epoll
-atomicvar_api:atomic-builtin
-gcc_version:4.8.5
-process_id:77734
-// run id    
-run_id:015d0798c7760366b579f9379fe5aec6b9848140
-tcp_port:8002
-uptime_in_seconds:4465
-uptime_in_days:0
-hz:10
-configured_hz:10
-lru_clock:6432896
-executable:/usr/local/bin/redis-server
-config_file:/usr/local/myredis/redis8002/redis.conf
-````
+   ````
+   192.168.122.3:8002> info server
+   # Server
+   redis_version:5.0.5
+   redis_git_sha1:00000000
+   redis_git_dirty:0
+   redis_build_id:9d46733cce1193bd
+   redis_mode:standalone
+   os:Linux 3.10.0-957.el7.x86_64 x86_64
+   arch_bits:64
+   multiplexing_api:epoll
+   atomicvar_api:atomic-builtin
+   gcc_version:4.8.5
+   process_id:77734
+   // run id    
+   run_id:015d0798c7760366b579f9379fe5aec6b9848140
+   tcp_port:8002
+   uptime_in_seconds:4465
+   uptime_in_days:0
+   hz:10
+   configured_hz:10
+   lru_clock:6432896
+   executable:/usr/local/bin/redis-server
+   config_file:/usr/local/myredis/redis8002/redis.conf
+   ````
 
-2.master知道你要备份我的数据,所以把run_id和偏移量传过去,master通过`info replication`可以查看从机的偏移量
+2. master知道你要备份我的数据，所以把run_id和偏移量传过去，master通过`info replication`可以查看从机的偏移量。
 
-`````java
-主机和从机的偏移量不一致的话就说明数据不一致
-`````
+   **主机和从机的偏移量不一致的话就说明数据不一致**
 
-3.从机把master返回的数据保存起来
+3. 从机把master返回的数据保存起来
 
-4.全量复制会触发master的rdb持久化,生成rdb文件(bgsave) ,但是在rdb持久化的过程中还会有数据会写入
+4. 全量复制会触发master的rdb持久化，生成rdb文件(bgsave) ，但是在rdb持久化的过程中还会有数据会写入master里面有缓冲区，会把新写的数据写入缓冲区。
 
-master里面有缓冲区,会把新写的数据写入
+   **缓冲区很重要，这是一个队列，默认只有1MB, 可以通过`repl-backlog-size`设置大小**
 
-`缓冲区很重要,这是一个队列,默认只有1MB, 可以通过repl-backlog-size设置大小`
+5. 发送rdb文件到从机
 
-5.发送rdb文件到从机
+6. 发送缓冲区的数据
 
-6.发送缓冲区的数据
+7. 从机清空所有的数据
 
-7.从机清空所有的数据
+8. 从机加载主机发送过来的rdb和buffer数据
 
-8.从机加载主机发送过来的rdb和buffer数据
-
-#### 消耗
+#### 全量复制消耗
 
 ```java
 1.bgsave时间
@@ -228,23 +180,16 @@ master里面有缓冲区,会把新写的数据写入
 3.从节点请求请求数据时间
 4.从节点加载rdb的时间
 5.可能的aof重写时间
-  从机本来是有aof的,加载主机的rdb文件是,aof会先执行,所以会有可能的aof的重写时间
+  从机本来是有aof的,加载主机的rdb文件时,aof会先执行,所以会有可能的aof的重写时间
   虽然会执行清空老数据,但是我还有aof老文件
 ```
 
-`通过缓冲区的数据比较来判断是否需要全量或者增量复制`
-
-`判断缓冲区是否有数据移除,如果网络抖动后从机发送一个请求,主机发送缓冲区的数据,从机判断偏移量,如果有数据移除了,因为有写满的情况,所以有数据丢失,会执行全量复制,`
+从机通过缓冲区的数据比较来判断是否需要全量或者增量复制：**判断缓冲区是否有数据移除，如果网络抖动后从机发送一个请求，主机发送缓冲区的数据，从机判断偏移量，如果有数据移除了（因为缓冲区也有写满的情况），所以有数据丢失，会执行全量复制。**
 
 ### 5.缺点
 
-1.由于所有的写操作都是先在Master上操作，然后同步更新到Slave上，所以从Master同步到Slave机器有一定的延迟，当系统很繁忙的时候，延迟问题会更加严重，Slave机器数量的增加也会使这个问题更加严重。
-
-2.当主机宕机之后，将不能进行写操作，需要手动将从机升级为主机，从机需要重新制定master
-
-`slaveof no one`
-
-另一个从机需要执行命令跟最新的master
+1. 由于所有的写操作都是先在Master上操作，然后同步更新到Slave上，所以从Master同步到Slave机器有一定的延迟，当系统很繁忙的时候，延迟问题会更加严重，Slave机器数量的增加也会使这个问题更加严重。
+2. 当主机宕机之后，将不能进行写操作，需要手动将从机升级为主机，从机需要重新制定master，通过命令`slaveof no one`来升级为主机。另一个从机需要执行命令`savelof xxx`来跟随最新的master。
 
 简单总结：
 
@@ -260,9 +205,9 @@ master里面有缓冲区,会把新写的数据写入
 
 ### 1.是什么，能干嘛？
 
-在Redis 2.8版本开始引入。哨兵的核心功能是主节点的自动故障转移。
+在Redis 2.8版本开始引入。哨兵的核心功能是**主节点的自动故障转移**。
 
-通俗来讲哨兵模式的出现是就是为了解决我们主从复制模式中需要我们人为操作的东西变为自动版，并且它比人为要更及时
+通俗来讲哨兵模式的出现是就是为了解决我们主从复制模式中需要我们人为操作的东西变为自动版，并且它比人为要更及时。
 
 ### 2.哨兵主要功能（做了哪些事）
 
@@ -284,23 +229,23 @@ master里面有缓冲区,会把新写的数据写入
 
 ### 4.怎么玩（实战）？
 
-#### 1.部署主从节点
+#### 1. 部署主从节点
 
 哨兵系统中的主从节点，与普通的主从节点配置是一样的，并不需要做任何额外配置。下面分别是主节点（port=8000）和2个从节点（port=8001/8002）的配置文件；
 
 我们刚才搭建的主从复制就是主从节点
 
-`配置了哨兵节点需要将从节点的密码也配上,因为发生了故障转移,需要密码`
+**配置了哨兵节点需要将从节点的密码也配上，因为发生了故障转移，需要密码**
 
 ```properties
 requirepassword 123456
 ```
 
-#### 2.部署哨兵节点
+#### 2. 部署哨兵节点
 
 哨兵节点本质上是特殊的Redis节点。
 
-3个哨兵节点的配置几乎是完全一样的，主要区别在于端口号的不同（26379 / 26380 / 263 81）下面以26379节点为例介绍节点的配置和启动方式；配置部分尽量简化：
+3个哨兵节点的配置几乎是完全一样的，主要区别在于端口号的不同（26379 / 26380 / 26381），下面以26379节点为例介绍节点的配置和启动方式；配置部分尽量简化：
 
 sentinel-26379.conf
 
@@ -312,9 +257,7 @@ logfile "26379.log"
 sentinel monitor mymaster 192.168.0.104 6379 2
 ````
 
-
-
-其中，sentinel monitor mymaster 192.168. 92.128 6379 2配置的含义是：该哨兵节点监92.168.0.104 6379这个主节点，该主节点的名称是mymaster，最后的2的含义与主节点的故障判定有关：至少需要2个哨兵节点同意，才能判定主节点故障并进行故障转移。
+其中，`sentinel monitor mymaster 192.168. 92.128 6379 2`配置的含义是：该哨兵节点监192.168.0.104 6379这个主节点，该主节点的名称是mymaster，最后的2的含义与主节点的故障判定有关：至少需要2个哨兵节点同意，才能判定主节点故障并进行故障转移。
 
 ###### 哨兵节点的启动有两种方式，二者作用是完全相同的：
 
@@ -363,31 +306,31 @@ public static void main(String[] args)  {
 
 关于哨兵的原理，关键是了解以下几个概念：
 
-主观下线：在心跳检测的定时任务中，如果其他节点超过一定时间没有回复，哨兵节点就会将其进行主观下线。顾名思义，主观下线的意思是一个哨兵节点“主观地”判断下线；与主观下线相对应的是客观下线。
+**主观下线**：在心跳检测的定时任务中，如果其他节点超过一定时间没有回复，哨兵节点就会将其进行主观下线。顾名思义，主观下线的意思是一个哨兵节点“主观地”判断下线；与主观下线相对应的是客观下线。
 
-客观下线：哨兵节点在对主节点进行主观下线后，会通过sentinel is-master-down-by-addr命令询问其他哨兵节点该主节点的状态；如果判断主节点下线的哨兵数量达到一定数值，则对该主节点进行客观下线。
+**客观下线**：哨兵节点在对主节点进行主观下线后，会通过sentinel is-master-down-by-addr命令询问其他哨兵节点该主节点的状态；如果判断主节点下线的哨兵数量达到一定数值，则对该主节点进行客观下线。
 
-需要特别注意的是，客观下线是主节点才有的概念；如果从节点和哨兵节点发生故障，被哨兵主观下线后，不会再有后续的客观下线和故障转移操作。
+**需要特别注意的是，客观下线是主节点才有的概念；如果从节点和哨兵节点发生故障，被哨兵主观下线后，不会再有后续的客观下线和故障转移操作。**
 
-`哨兵模式会篡改文件`
+**`哨兵模式会篡改文件`**
 
 定时任务：每个哨兵节点维护了3个定时任务。定时任务的功能分别如下：
 
-1.每10秒通过向主从节点发送info命令获取最新的主从结构；
+1. 每10秒通过向主从节点发送info命令获取最新的主从结构；
 
-  发现slave节点
+     发现slave节点
 
-  确定主从关系
+     确定主从关系
 
-2.每2秒通过发布订阅功能获取其他哨兵节点的信息；SUBSCRIBE  c2     PUBLISH c2 hello-redis
+2. 每2秒通过发布订阅功能获取其他哨兵节点的信息；SUBSCRIBE  c2     PUBLISH c2 hello-redis
 
-  交互对节点的“看法”和自身情况
+     交互对节点的“看法”和自身情况
 
-3.每1秒通过向其他节点发送ping命令进行心跳检测，判断是否下线（monitor）。
+3. 每1秒通过向其他节点发送ping命令进行心跳检测，判断是否下线（monitor）。
 
-  心跳检测，失败判断依据
+     心跳检测，失败判断依据
 
-
+   
 
 选举领导者哨兵节点：当主节点被判断客观下线以后，各个哨兵节点会进行协商，选举出一个领导者哨兵节点，并由该领导者节点对其进行故障转移操作。
 
@@ -411,8 +354,6 @@ public static void main(String[] args)  {
 同时也会把redis.conf文件里面的相关配置篡改了
 ````
 
-
-
 将已经下线的主节点（即6379）保持关注，当6379从新上线后设置为新的主节点的从节点
 
 ### 8.实践建议
@@ -427,9 +368,5 @@ public static void main(String[] args)  {
 
 ### 9.总结
 
-在主从复制的基础上，哨兵引入了主节点的自动故障转移，进一步提高了Redis的高可用性；但是哨兵的缺陷同样很明显：哨兵无法对从节点进行自动故障转移，在读写分离场景下，从节点故障会导致读服务不可用，需要我们对从节点做额外的监控、切换操作。此外，哨兵仍然没有解决写操作无法负载均衡、及存储能力受到单机限制的问题
-
-
-
-------
+在主从复制的基础上，哨兵引入了主节点的自动故障转移，进一步提高了Redis的高可用性；但是哨兵的缺陷同样很明显：哨兵无法对从节点进行自动故障转移，在读写分离场景下，从节点故障会导致读服务不可用，需要我们对从节点做额外的监控、切换操作。此外，哨兵仍然没有解决写操作无法负载均衡以及存储能力受到单机限制的问题。
 
