--- a/redis/3.redis cluster.md
+++ b/redis/3.redis cluster.md
@@ -71,7 +71,7 @@ sed 's/8000/8006/g' redis.conf > 8006/redis.conf
 
 ##### 2. meet
 
-启动redis后不能set 数据,可以通过cluster nodes 查看节点信息
+启动redis后不能set 数据，可以通过cluster nodes 查看节点信息
 
 ```
 /usr/local/bin/redis-cli -h 192.168.122.3 -p 8001 -a litian cluster nodes
@@ -110,7 +110,7 @@ sed 's/8000/8006/g' redis.conf > 8006/redis.conf
 
 如果一个一个来特别麻烦,使用shell脚本循环执行
 
-`addslots.sh`
+新建`addslots.sh`文件，文件内容如下
 
 ```
 start=$1
@@ -139,7 +139,7 @@ sh addslots.sh 10923 16383  8003
 /usr/local/bin/redis-cli -h 192.168.122.3 -p 8004(成为slave的实例) -a litian cluster replicate  22272d7f070d3fee5f78f5e7bb8c9d2df80269f9 (master的node_id)
 ````
 
-如此往复便搭建成功了,此外在`node-xxx.log`里面存了集群的配置信息不能轻易删除
+如此往复便搭建成功了，此外在`node-xxx.log`里面存了集群的配置信息不能轻易删除
 
 `关闭的话使用shutdown命令一台一台的关闭即可`
 
@@ -258,7 +258,7 @@ sed 's/7001/7008/g' redis.conf > redis-7008/redis.conf
    /usr/local/bin/redis-cli -h 192.168.122.4 -p 7001 -a 123456 --cluster add-node  192.168.122.4:7008 192.168.122.4:7001 
    ```
 
-2. 使用原生命令 语法：`cluster meet ip port`
+2. 使用原生命令语法：`cluster meet ip port`
 
 指定主从
 
@@ -378,25 +378,23 @@ public static void main(String[] args) {
 
 ### 5.故障转移（与哨兵相似）
 
-1.故障发现： 通过ping/pong消息实现故障发现（不依赖sentinel）
+1. 故障发现： 通过ping/pong消息实现故障发现（不依赖sentinel）
 
-2.故障恢复
+2. 故障恢复
 
-1.检查那个从节点是否有资格
+   检查那个从节点是否有资格
 
-  1.每个从节点检查与主节点的断开时间
+   1. 每个从节点检查与主节点的断开时间，超过`cluster-node-timeout` * `cluster-replica-validity-factor` 时间认为这个从节点是不健康的节点，所以取消资格。
 
-  超过`cluster-node-timeout` * `cluster-replica-validity-factor` 时间认为这个从节点是不健康的节点 所以取消资格
+   2. 选择偏移量最大的。
 
-  2.选择偏移量最大的
+3. 替换主节点
 
-  替换主节点
+   1. 当前从节点取消复制变为主节点（slaveof no one）
 
-1.当前从节点取消复制变为主节点（slaveof no one）
+   2. 撤销以前主节点的槽位，给新的主节点
 
-2.撤销以前主节点的槽位，给新的主节点
-
-3.向集群广播消息，表明已经替换了故障节点
+   3. 向集群广播消息，表明已经替换了故障节点
 
 
 
