提交JVM调优步骤

--- a/dubbo/4.dubbo服务导入.md
+++ b/dubbo/4.dubbo服务导入.md
@@ -15,7 +15,7 @@
 
 根据服务名去找到服务提供者的地址，以备后续进行调用。
 
-1. 如果明确指定了，那就去指定的注册中心地址，或指定的服务提供者地址去找(这种就是直连，不会经过 路由策略)
+1. 如果明确指定了，那就去指定的注册中心地址，或指定的服务提供者地址去找(这种就是直连，不会经过路由策略)
 2. 如果没有明确指定，那就从配置的注册中心去找服务提供者地址，注意，这里可能会配置多个注册中心 (会经过路由策略)
 
 ## 分析
@@ -50,7 +50,7 @@ Invoker需要有什么功能：
 2. 按路由策略进行过滤
 3. 包装所有服务提供者的地址在一个对象内
 4. 注册监听器以监听路由策略的变化、服务提供者地址的变化、服务调用相关信息的变化
-   
+  
 
 ## 监听对象
 
@@ -321,7 +321,7 @@ private <T> Invoker<T> doRefer(Cluster cluster, Registry registry, Class<T> type
   // all attributes of REFER_KEY
   // 还是refer后面的配置参数
   Map<String, String> parameters = new HashMap<String, String>(directory.getUrl().getParameters());
-  // 消费者的URL也会存在注册中心上，在zk的consumer下，这儿会对consumer的url进行简化
+  // 消费者的URL也会存在注册中心上，在zk的consumer目录下，这儿会对consumer的url进行简化
   URL subscribeUrl = new URL(CONSUMER_PROTOCOL, parameters.remove(REGISTER_IP_KEY), 0, type.getName(), parameters);
   if (!ANY_VALUE.equals(url.getServiceInterface()) && url.getParameter(REGISTER_KEY, true)) {
     directory.setRegisteredConsumerUrl(getRegisteredConsumerUrl(subscribeUrl, url));
@@ -642,7 +642,7 @@ private <T> Invoker<T> doRefer(Cluster cluster, Registry registry, Class<T> type
        List<Invoker<T>> newInvokers = Collections.unmodifiableList(new ArrayList<>(newUrlInvokerMap.values()));
        // pre-route and build cache, notice that route cache should build on original Invoker list.
        // toMergeMethodInvokerMap() will wrap some invokers having different groups, those wrapped invokers not should be routed.
-       // 设置进路由链中，进行路由的过滤
+       // 设置进路由链中
        routerChain.setInvokers(newInvokers);
        this.invokers = multiGroup ? toMergeInvokerList(newInvokers) : newInvokers;
        this.urlInvokerMap = newUrlInvokerMap;
