--- a/dubbo/5.dubbo服务调用与容错、服务降级、负载均衡源码分析.md
+++ b/dubbo/5.dubbo服务调用与容错、服务降级、负载均衡源码分析.md
@@ -120,7 +120,7 @@ private static <T> Invoker<T> buildInvokerChain(final Invoker<T> invoker, String
 
 接着看，当有多个invokers我们会执行`invoker = cluster.join(new StaticDirectory(u, invokers));`这个方法把多个invokers进行合并，这个join里面具体干了什么呢？
 
-这个cluster其实也有很多实现类，他们主要是**为了提供服务降级和服务容错一起一些个负载均衡的**，默认实现类是`FailoverCluster`，我们先来看它的包装类。
+这个cluster其实也有很多实现类，他们主要是**为了提供服务降级和服务容错以及一些个负载均衡的**，默认实现类是`FailoverCluster`，我们先来看它的包装类。
 
 ```java
 public class MockClusterWrapper implements Cluster {
@@ -451,7 +451,7 @@ public Result doInvoke(Invocation invocation, final List<Invoker<T>> invokers, L
 
 执行完后就到我们的3个过滤器对应的invoke，鼓掌。
 
-这儿稍微提一下`FutureFilter`，其实这个方法是执行对我们预先在配置里面加的测试方法，具体配置：`<dubbo:reference ><dubbo:method name="xxx" oninvoke="test.test"></dubbo:...>``<bean id="test" class="xxxx">`这个class里面的方法要和我们本来调用接口方法的参数一模一样才行。具体代码就不看了，这就方法就是测试一下我们调用可不可行。`MonitorFilter#invoke`其实就是调用监控中心，收集监控信息，上传到监控中心。
+这儿稍微提一下`FutureFilter`，其实这个方法是执行对我们预先在配置里面加的测试方法，具体配置：`<dubbo:reference ><dubbo:method name="xxx" oninvoke="test.test"></dubbo:...><bean id="test" class="xxxx">`这个class里面的方法要和我们本来调用接口方法的参数一模一样才行。具体代码就不看了，这就方法就是测试一下我们调用可不可行。`MonitorFilter#invoke`其实就是调用监控中心，收集监控信息，上传到监控中心。
 
 到最后其实就是执行到协议对应的protocol类，然后执行refer方法，我们这儿使用的是htttp，所以是`HttpProtocol`里面的`doRefer`方法，这个方法其实就是构造HttpClient发送调用方法请求。把接口方法名和参数发送过去，在http发送的时把方法名和参数加到URL上面发送到服务提供者。
 
@@ -569,7 +569,9 @@ System.out.println("result: " + hello);
 
 `ExceptionFilter`就是把`Exception`进行一个包装。
 
-最终执行实现类的代理类`InvokerDelegate`，把结果发送回消费端。发送的过程，如果使用http协议其实就是输出流输出`OutputStream`。
+最终执行实现类的代理类`InvokerDelegate`，把结果发
+
+送回消费端。发送的过程，如果使用http协议其实就是输出流输出`OutputStream`。
 
 ## 总结
 
