--- a/jvm/2.类的加载机制.md
+++ b/jvm/2.类的加载机制.md
@@ -96,7 +96,7 @@ sun.misc.Launcher$AppClassLoader
 
 + 沙箱安全机制：比如自己写的String.class类不会被加载，这样可以防止核心库被随意篡改
 
-+ 避免类的重复加载：当父ClassLoader已经加载了该类的时候，就不需要子CJlassLoader再加载一次
++ 避免类的重复加载：当父ClassLoader已经加载了该类的时候，就不需要子ClassLoader再加载一次
 
   
 
@@ -141,12 +141,8 @@ DriverManager.getConnection("....");
 /***
 	mysql就打破了双亲委派机制，在jdbc4.0之后不需要Class.forName()
 	加载驱动，直接DriverManager.getConnection("....")就可以了，因为它会
-	调用线程上下文的加载器加载。而DriverManager在rt包下面，是bootstrap加载器
+	调用线程上下文的加载器加载。而DriverManager在rt包下面，是bootstrap加载器，所以本来应该用boostrap加载器，但是却使用了ApplicaitonClassLoader，所以打破了双亲委派
 ****/
-
-
-
-
 ````
 
 
@@ -159,7 +155,7 @@ DriverManager.getConnection("....");
 
 #### 查看JVM的参数
 
-随便启动了一个Spring Boot应用，通过jpa命令查看对应的进程id，然后执行`jinfo -flags processId`
+随便启动了一个Spring Boot应用，通过`jps`命令查看对应的进程id，然后执行`jinfo -flags processId`
 
 ![](./img/8.png)
 
@@ -177,7 +173,9 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 #### 类加载统计
 
+`jstat -class 3963`
 
+![](./img/21.jpg)
 
 + Loaded：加载class的数量
 + Bytes：所占用空间大小
@@ -187,7 +185,11 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 #### 垃圾回收统计
 
+`jstat -gc 3963`
 
+便于我们分析
+
+![](./img/22.jpg)
 
 + S0C：第一个Survivor区的空间
 + S1C：第二个Survivor区的空间
@@ -209,7 +211,9 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 #### 堆内存统计
 
+`jstat -gccapacity 3963`
 
+![](./img/23.jpg)
 
 + NGCMN：新生代最小空间
 + NGCMX：新生代最大空间
@@ -232,7 +236,9 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 ##### 新生代垃圾回收统计
 
+`jstat -gcnew 3963`
 
+![](./img/24.jpg)
 
 + S0C：第一个Survivor区空间
 + S1C：第二个Survivor区空间
@@ -248,7 +254,9 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 ##### 新生代内存统计
 
+`jstat -gcnewcapacity 3963`
 
+![](./img/25.jpg)
 
 + NGCMN：新生代最小空间
 + NGCMX：新生代最大空间
@@ -264,7 +272,9 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 
 #### 老年代垃圾回收统计
 
+`jstat -gcold 3963`
 
+![](./img/26.jpg)
 
 + MC：元空间的总空间
 + MU：元空间的使用空间
@@ -276,9 +286,12 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 + FGC：老年代GC次数
 + FGCT：老年代垃圾回收消耗时间
 + GCT：垃圾回收消耗总时间
-+ 
 
 #####  老年代内存统计
+
+`jstat -gcoldcapacity 3963`
+
+![](./img/27.jpg)
 
 + OGCMN：老年代最小空间
 + OGCMX：老年代最大空间
@@ -290,6 +303,11 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 + GCT：垃圾回收消耗总时间
 
 ##### 元空间内存统计
+
+`jstat -gcmetacapacity 3963`
+
+![](./img/28.jpg)
+
 + MCMN：最小元空间大小
 + MCMX：最大元空间大小
 + MC：当前元空间大小
@@ -302,6 +320,10 @@ jstat [-命令选项] [vmid] [间隔时间/毫秒] [查询次数]
 + GCT：垃圾回收消耗总时间
 
 ##### 总垃圾回收统计
+
+`jstat -gcutil 3963`
+
+![](./img/29.jpg)
 
 + S0：第一个Survivor区当前使用比例
 + S1：第二个Survivor区当前使用比例
@@ -325,11 +347,9 @@ jmap -histo 10716 > 10716.txt // 这个指令是统计所有的对象
 jmap -histo:live 10716 > 10716.txt    // 可以统计活着的对象
 ````
 
-
-
 如图：
 
-
+![](./img/30.jpg)
 
 + Num：序号
 + Instances：实例数量
@@ -342,9 +362,11 @@ jmap -histo:live 10716 > 10716.txt    // 可以统计活着的对象
 jmap -heap 10716
 ````
 
-
+<img src="./img/31.jpg" style="zoom:50%;" />
 
 #### 堆内存dump
+
+dump文件其实就是堆内存的快照。
 
 `````java
 jmap -dump:format=b,file=springboot.hprof 10716
@@ -443,12 +465,116 @@ Heap // 这儿还打印了堆内存的信息
 
 可以看见d盘生成了一个`oomdump.dump`文件，导入到`jvisualvm`中分析
 
+![](./img/32.png)
 
+可以看见一些基本信息，包括错误。还可以看见系统属性，这其实是jinfo的命令，只是集成到了jmap里面了。
+
+![](./img/33.png)
+
+可以继续看到实例数占用大小，那么这儿为什么是char占用最多？因为String底层就是char的数组，我们可以点进User里面看看
+
+![](./img/34.png)
+
+
+
+可以看见有很多User的实例，每个实例的字段和uid，uid就是String的。
 
 ### Jstack
 
-
-
 jstack用于生成java虚拟机当前时刻的线程快照
 
+`jstack 3963`
+
 这儿通过一个死锁的例子来分析
+
+```java
+public class DeadLock {
+
+    private static Object lock1 = new Object();
+    private static Object lock2 = new Object();
+
+    public static void main(String[] args) {
+        new Thread(() -> {
+            synchronized (lock1) {
+                System.out.println("Thread1 start");
+                try {
+                    Thread.sleep(5000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                synchronized (lock2) {
+                    System.out.println("thread1 end");
+                }
+            }
+        }).start();
+
+        new Thread(() -> {
+            synchronized (lock2) {
+                System.out.println("Thread2 start");
+                try {
+                    Thread.sleep(5000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                synchronized (lock1) {
+                    System.out.println("thread2 end");
+                }
+            }
+        }).start();
+
+        System.out.println("end");
+    }
+}
+```
+
+使用jstack命令
+
+````
+Found one Java-level deadlock:
+=============================
+"Thread-1":
+  waiting to lock monitor 0x00007f84ab8086a8 (object 0x000000076ada56b0, a java.lang.Object),
+  which is held by "Thread-0"
+"Thread-0":
+  waiting to lock monitor 0x00007f84ab805e18 (object 0x000000076ada56c0, a java.lang.Object),
+  which is held by "Thread-1"
+
+Java stack information for the threads listed above:
+===================================================
+"Thread-1":
+	at com.px.util.DeadLock.lambda$main$1(DeadLock.java:32)
+	- waiting to lock <0x000000076ada56b0> (a java.lang.Object)
+	- locked <0x000000076ada56c0> (a java.lang.Object)
+	at com.px.util.DeadLock$$Lambda$2/668386784.run(Unknown Source)
+	at java.lang.Thread.run(Thread.java:748)
+"Thread-0":
+	at com.px.util.DeadLock.lambda$main$0(DeadLock.java:18)
+	- waiting to lock <0x000000076ada56c0> (a java.lang.Object)
+	- locked <0x000000076ada56b0> (a java.lang.Object)
+	at com.px.util.DeadLock$$Lambda$1/764977973.run(Unknown Source)
+	at java.lang.Thread.run(Thread.java:748)
+
+Found 1 deadlock.
+````
+
+````
+"Finalizer" #3 daemon prio=8 os_prio=31 tid=0x00007f84ad800000 nid=0x4d03 in Object.wait() [0x000070000c072000]
+   java.lang.Thread.State: WAITING (on object monitor)
+	at java.lang.Object.wait(Native Method)
+	- waiting on <0x000000076ab08ec8> (a java.lang.ref.ReferenceQueue$Lock)
+	at java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:143)
+	- locked <0x000000076ab08ec8> (a java.lang.ref.ReferenceQueue$Lock)
+	at java.lang.ref.ReferenceQueue.remove(ReferenceQueue.java:164)
+	at java.lang.ref.Finalizer$FinalizerThread.run(Finalizer.java:209)
+
+"Reference Handler" #2 daemon prio=10 os_prio=31 tid=0x00007f84ab802800 nid=0x3403 in Object.wait() [0x000070000bf6f000]
+   java.lang.Thread.State: WAITING (on object monitor)
+	at java.lang.Object.wait(Native Method)
+	- waiting on <0x000000076ab06b68> (a java.lang.ref.Reference$Lock)
+	at java.lang.Object.wait(Object.java:502)
+	at java.lang.ref.Reference.tryHandlePending(Reference.java:191)
+	- locked <0x000000076ab06b68> (a java.lang.ref.Reference$Lock)
+	at java.lang.ref.Reference$ReferenceHandler.run(Reference.java:153)
+````
+
+可以分析看看，比如第一个线程等待`0x000000076ab08ec8`，但是却把`0x000000076ab08ec8`锁住了，简单来说就是**自己把自己锁住了**。
