--- a/zookeeper/0.zookeeper简单应用部分.md
+++ b/zookeeper/0.zookeeper简单应用部分.md
@@ -12,7 +12,7 @@
 
 + Zookeeper是一个拥有文件系统特点的数据库
 
-  一个znode节点可以包含子znode，同时也可以包含数据，znode 即是文件夹又是文件的概念，所以在 ZooKeeper 这里面就不叫文件也不叫文件夹，叫znode，每个znode有唯一的路径标识， 既能存储数据，也能创建子znode。但是`znode只适合存储非常小的数据，不能超过1M`，最好都小于1K。我们可以看到操作节点都离不开`/`这个符号，这一点和文件系统相似，所以我们说它和文件系统一样。
+  一个znode节点可以包含子znode，同时也可以包含数据，znode 即是文件夹又是文件的概念，所以在 ZooKeeper 这里面就不叫文件也不叫文件夹，叫znode，每个znode有唯一的路径标识， 既能存储数据，也能创建子znode。但是**znode只适合存储非常小的数据，不能超过1M**，最好都小于1K。我们可以看到操作节点都离不开`/`这个符号，这一点和文件系统相似，所以我们说它和文件系统一样。
 
   zookeeper的文件系统的特点：
 
