--- a/zookeeper/5.zookeeper领导者选举源码分析.md
+++ b/zookeeper/5.zookeeper领导者选举源码分析.md
@@ -65,19 +65,19 @@ synchronized public void startLeaderElection() {
 ````
 
 ````java
-
-        public Vote(long id, 
-                    long zxid, 
-                    long peerEpoch) {
-            this.version = 0x0;
-            this.id = id; // myid
-            this.zxid = zxid;
-            this.electionEpoch = -1; // 选举周期，每次选举+1，按道理是从0开始，可以理解第几轮
-            // 届号,如果有届号就先判断届号大，就不用比较zxid
-            // 如果收到其他服务器的届号比自己大就把自己的届号更新为对方的届号，在继续循环
-            this.peerEpoch = peerEpoch;  
-            this.state = ServerState.LOOKING;
-    	}
+// 投票类
+public Vote(long id, 
+            long zxid, 
+            long peerEpoch) {
+  this.version = 0x0;
+  this.id = id; // myid
+  this.zxid = zxid;
+  this.electionEpoch = -1; // 选举周期，每次选举+1，按道理是从0开始，可以理解第几轮
+  // 届号,如果有届号就先判断届号大，就不用比较zxid
+  // 如果收到其他服务器的届号比自己大就把自己的届号更新为对方的届号，在继续循环
+  this.peerEpoch = peerEpoch;  
+  this.state = ServerState.LOOKING;
+}
      
 ````
 
