add something new

--- a/rabbitmq/2.rabbitmq与Spring boot整合.md
+++ b/rabbitmq/2.rabbitmq与Spring boot整合.md
@@ -11,7 +11,7 @@
 | Unacked | 待确认状态             |
 | Total   | 总数                   |
 
-`rabbitMQ`提供了一个消费确认机制，防止消费端消费失败，如果消息处于待确认的状态不会被其他消费者消费，会处于一个等待的状态，如果消费者断开连接，那么这条消息会重回一个准备就绪状态。
+`rabbitMQ`提供了一个**消费确认机制**，防止消费端消费失败，如果消息处于待确认的状态不会被其他消费者消费，会处于一个等待的状态，如果消费者断开连接，那么这条消息会重回一个准备就绪状态。
 
 ```java
 // 消费消息    
@@ -47,6 +47,8 @@ DefaultConsumer deliverCallback = new DefaultConsumer(channel) {
         channel.basicAck(envelope.getDeliveryTag(), false);
     }
 };
+
+channel.basicConsume(ConnectionUtil.QUEUE_NAME, false, deliverCallback);
 ````
 
 ## 重复消费
