--- a/rabbitmq/3.企业中使用rabbitmq问题.md
+++ b/rabbitmq/3.企业中使用rabbitmq问题.md
@@ -4,9 +4,7 @@
 
 ## 如何确定消息发送到了交换机
 
-### 发送方确认
-
-确认消息到达了交换机
+### 发送方确认（确认消息到达了交换机）
 
 1.在发送方开启消息确认
 
@@ -64,7 +62,7 @@ public static void main(String[] args) {
 
 ### 失败回调
 
-在消息从交换机到达队列的时候，如果失败了会调用一个失败回调方法
+在**消息从交换机到达队列**的时候，如果失败了会调用一个失败回调方法
 
 1. 同样的需要打开消息确认的功能，在发送方生成连接的时候打开
 
